Adding some high level metrics
